[workspace]
resolver = "2"

members = [
    "bwk",
    "electrum",
    "backoff"
]

[workspace.package]
edition = "2021"
authors = ["pythcoiner"]
license-file = "LICENSE"
repository = "https://github.com/pythcoiner/bwk"
keywords = ["bitcoin"]

[workspace.dependencies]
base64ct = "=1.6.0"
url = "=2.5.2"
bip39 = "2.0.0"
bitcoin = "=0.32.2"
bitcoin_slices = "0.8.0"
dirs = "6.0.0"
hex-conservative = "0.2.1"
hex_lit = "0.1.1"
home = "=0.5.9"
libc = "0.2.170"
log = "0.4.20"
miniscript = "12.2.0"
native-tls = "=0.2.13"
openssl = "0.10.66"
rand = "0.9.1"
serde = "1.0.218"
serde_json = "1.0.128"
env_logger = "0.11.6"

bwk-electrum = { path = "electrum", version = "0.0" }
bwk-backoff = { path = "backoff" , version = "0.0"}
bwk = { path = "bwk" , version = "0.0"}


