[package]
name = "bwk-backoff"
version = "0.0.3"
description = "A simple backoff feature used in bwk"
documentation = "https://docs.rs/bwk-backoff"
readme.workspace = true
license-file.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
rand.workspace = true
