[package]
name = "bwk"
version = "0.0.6"
readme.workspace = true
description = "Bitcoin wallet kit"
documentation = "https://docs.rs/bwk"
license-file.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
exclude = ["tests/**"]

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]
doctest = false

[dependencies]
miniscript.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
env_logger.workspace = true
dirs.workspace = true
bwk-electrum.workspace = true
bip39 = { workspace = true, features = ["serde", "rand"] }
bwk-backoff.workspace = true

[dev-dependencies]
electrsd = { git = "https://github.com/pythcoiner/electrsd.git", branch = "buffered_logs"}
rand = "0.9.0"
temp-dir.workspace = true
