[package]
name = "bwk-electrum"
version = "0.0.2"
readme = "README.md"
description = "Electrum client used by bwk"
documentation = "https://docs.rs/bwk-electrum"
license-file.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
exclude = ["tests/**"]

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]
doctest = false

[dependencies]
miniscript = { workspace = true, features = ["serde", "base64"] }
bitcoin_slices.workspace = true
log.workspace = true
openssl = { workspace = true, features = ["vendored"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
hex-conservative.workspace = true
bwk-backoff.workspace = true

[dev-dependencies]
hex_lit.workspace = true
electrsd = {version = "0.29.0", features = []}
